--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@
         
         <span>Ahrizky</span>
       </a>
-      <a href="https://t.me/YourTelegramChannel" target="_blank" class="social-badge">
+      <a href="https:" target="_blank" class="social-badge">
         <i class="fa-brands fa-telegram"></i>
         <span>Telegram</span>
       </a>
